kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: typetunerweb
  name: typetunerweb
spec:
  ports:
  - name: http
    port: 80
  - name: fastcgi
    port: 9000
    protocol: TCP
  selector:
    app: typetunerweb
