kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typetunerweb
spec:
  rules:
  - host: typetunerweb.languagetechnology.org
    http:
      paths:
      - path: /ttw
        pathType: Prefix
        backend:
          service:
            name: typetunerweb
            port:
              name: http
